9-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-cbmpei
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: odoo-cbmpei.webdiscode.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odoo-cbmpei
            port:
              name: http
  tls:
  - hosts:
    - odoo-cbmpei.webdiscode.com
    secretName: odoo-cbmpei.webdiscode.com-tls
